--- a/css/style.css
+++ b/css/style.css
@@ -226,11 +226,47 @@ footer{
   text-align: center;
   color: #fff;
   background-color: rgb(34, 34, 34);
-  height: 200px;
+  height: 250px;
   font-size: 1.3em;
   margin-top: 200px;
 }
-@media only screen and (max-width:768px) {
+button.share-toggle-button:focus {
+	outline: none !important;
+}
+.search-container{
+  display: flex;
+  position: absolute;
+  right: 30px;
+  top: 25px;
+}
+.search-container input{
+  border-style: none;
+  font-size: 1.2em;
+  width: 170px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  padding-left: 10px;
+}
+.search-container button{
+  border-style: none;
+  background-color: #fff;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  padding-bottom: 5px;
+  width: 50px;
+}
+.search-container input:focus{
+  background-color: #fff !important;
+  outline: none;
+}
+.search-container button:focus{
+  background-color: #fff !important;
+  outline: none;
+}
+.line-icon{
+  font-size: 1.5em;
+}
+@media only screen and (max-width:991px) {
   nav.nav-desktop{
     display: none;
   }
