--- a/css/gallery-style.css
+++ b/css/gallery-style.css
@@ -142,8 +142,6 @@ background-size: cover;
   background-size: 30%;
   background-position: center;
 }
-
-
 @media only screen and (min-width:768px) {
   .div4{
     margin-top: -80px;
@@ -157,5 +155,105 @@ background-size: cover;
 @media only screen and (min-width:1200px) {
   .div4{
     margin-top: -125px;
+  }
+}
+/*-----------------------------------------------------*/
+#body-part3{
+background-color: #ffffff;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cpolygon fill='%234a0b0b' points='957 450 539 900 1396 900'/%3E%3Cpolygon fill='%237b0000' points='957 450 872.9 900 1396 900'/%3E%3Cpolygon fill='%23421015' points='-60 900 398 662 816 900'/%3E%3Cpolygon fill='%236d0b16' points='337 900 398 662 816 900'/%3E%3Cpolygon fill='%233a151e' points='1203 546 1552 900 876 900'/%3E%3Cpolygon fill='%235f162b' points='1203 546 1552 900 1162 900'/%3E%3Cpolygon fill='%23321a28' points='641 695 886 900 367 900'/%3E%3Cpolygon fill='%23522041' points='587 900 641 695 886 900'/%3E%3Cpolygon fill='%232a1f31' points='1710 900 1401 632 1096 900'/%3E%3Cpolygon fill='%23442b56' points='1710 900 1401 632 1365 900'/%3E%3Cpolygon fill='%2322243b' points='1210 900 971 687 725 900'/%3E%3Cpolygon fill='%2336366c' points='943 900 1210 900 971 687'/%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover;
+}
+#rslides-pubg{
+  margin: 200px auto !important;
+}
+.gallery-row1,.gallery-row2,.gallery-row3,.gallery-row4 img{
+  border-radius: 15px !important;
+}
+/*-------------------------------------------------------*/
+#body-part4{
+background-color: #000000;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23220000' points='1600 160 0 460 0 350 1600 50'/%3E%3Cpolygon fill='%23440000' points='1600 260 0 560 0 450 1600 150'/%3E%3Cpolygon fill='%23660000' points='1600 360 0 660 0 550 1600 250'/%3E%3Cpolygon fill='%23880000' points='1600 460 0 760 0 650 1600 350'/%3E%3Cpolygon fill='%23A00' points='1600 800 0 800 0 750 1600 450'/%3E%3C/g%3E%3C/svg%3E");
+background-attachment: fixed;
+background-size: cover;
+}
+.mask-battlefield{
+  background-color: rgba(22, 22, 22, 0.75);
+  height: 114%;
+  width: 100%;
+  position: absolute;
+  top: 85px;
+  left: 0;
+}
+.mask-battlefield h1{
+  color: #fff;
+  font-size: 4em;
+  text-align: center;
+  margin-top: 200px;
+}
+.mask-battlefield input{
+  display: flex;
+  margin: 0 auto;
+  font-size: 2em;
+}
+#body-part4 .rslides_tabs li{
+  /* list-style: none; */
+  display: inline;
+  margin: 0 10px;
+  padding: 5px 0px;
+  border: 2px solid #000;
+  border-radius: 50px;
+  background-color: #eee;
+}
+#body-part4 .rslides_tabs li:hover{
+  background-color: #9e9e9e;
+}
+#body-part4 .rslides_tabs li a,#body-part4 .rslides_tabs li a:hover{
+  color: #000;
+  text-decoration: none;
+  padding: 10px;
+}
+#body-part4 .rslides_tabs{
+  margin-left: 210px;
+  margin-top: 30px;
+}
+
+
+
+
+
+
+@media only screen and (max-width:850px) {
+  .mask-battlefield h1{
+    margin-top: 100px;
+    font-size: 2em;
+  }
+  .mask-battlefield input{
+    display: flex;
+    margin: 0 auto;
+    font-size: 1em;
+  }
+  .mask-battlefield{
+    height: 63%;
+  }
+  #body-part4 .rslides_tabs{
+    margin-left: 100px;
+  }
+  #body-part4 .rslides_tabs li{
+    margin: 0 5px;
+    padding: 5px 0px;
+  }
+}
+@media only screen and (max-width:550px) {
+  #body-part4 .rslides_tabs li a{
+    padding: 0;
+  }
+  #body-part4 .rslides_tabs li{
+    margin: 0 2px;
+    padding: 0px 5px;
+  }
+  #body-part4 .rslides_tabs{
+    margin-top: 10px;
+    margin-left: 20px;
   }
 }
